<resources>
    <string name="app_name">微信红包助手</string>

    <string name="accessibility_description">本插件只适用于微信 \n\n功能描述:\n\n\t\t\ta: 微信自助抢红包  \n\n使用说明:\n\n\t\t\t1. 打开右上方开关\n\n\t\t\t2. 进入微信APP聊天页面  \n\n\t\t\t3. 系统将自动监测领取红包   \n\n注意事项:\n\n\t\t\t1. 微信的版本升级,可能导致功能无法正常运转\n\n\t\t\t2. 部分手机会有兼容性问题,可能无法正常运转\n\n\t\t\t3. 注意悬浮操作按钮的状态哦,点击试下</string>


    <string name="str_blessing">大吉大利</string>

    <string name="service_off">关闭插件</string>
    <string name="service_on">开启插件</string>
    <string name="preference">偏好设置</string>

    <string name="about">关于应用</string>
    <string name="settings">设置</string>
    <string name="watch_options">监视选项</string>
    <string name="watch_notifications">监视系统通知(敬请期待)</string>
    <string name="watch_notifications_hint">读取新消息通知中的红包提示并进入聊天页</string>
    <string name="watch_list">监视聊天列表</string>
    <string name="watch_list_hint">读取聊天列表中的红包提示并进入聊天页</string>
    <string name="anti_block_options">防封号选项</string>
    <string name="auto_open_packets">自动拆开红包</string>
    <string name="open_with_delay">延时拆开红包</string>
    <string name="open_self">拆开自己发的红包</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="help_hint">前往GitHub项目主页提交issue</string>
    <string name="watch_back_list">持续监视列表</string>
    <string name="watch_back_list_hint">领取红包后自动返回首页列表继续监视</string>

    <string name="shortcut_options">快捷选项</string>

    <string name="float_switch_title">悬浮操作</string>
    <string name="float_switch_hint">悬浮操作启动或暂停本插件</string>

    <string name="skip_phrases">屏蔽红包文字</string>
    <string name="pref_watch_exclude_words_summary">不拆开包含这些文字的红包(空格间隔)</string>

    <string name="skip_phrases_chat">屏蔽聊天对象</string>
    <string name="pref_watch_exclude_words_summary_chat">不拆开包含这些人或群聊发出的红包(空格间隔)</string>

    <string name="delay_s">秒</string>
    <string name="delay_then">然后</string>
    <string name="delay_delay">延迟</string>
    <string name="delay_instantly">立即</string>
    <string name="delay_open">拆开红包</string>
    <string name="special_explain">特别说明</string>
    <string name="warning">警告</string>
    <string name="warning_hint">本插件仅供学习使用，使用者自行承担随之而来的各种风险，不限于“禁用红包功能”、“微信封号”</string>


    <string name="url_github_index">https://github.com/mxruan/WechatLuckyMoney</string>
    <string name="url_github_issues">https://github.com/mxruan/WechatLuckyMoney/issues</string>

    <string name="str_github_index">GitHub 项目主页</string>
    <string name="str_github_issues">GitHub Issues</string>

    <string name="email">电子邮箱</string>
    <string name="email_code">mxruan@163.com</string>

    <string name="compatibility">兼容性</string>
    <string name="compatibility_hint">部分手机可能无法正常使用  ^_^\" </string>

    <string name="str_community">社区</string>
    <string name="str_github">GitHub</string>
    <string name="str_start">开启插件</string>
    <string name="str_stop">关闭插件</string>

    <string name="github_1">在 GitHub 上</string>
    <string name="github_2">本项目，支持应用开源</string>
    <string name="star_2">Star</string>
    <string name="star_1">★</string>



    <string name="str_open">启动</string>
    <string name="str_close">暂停</string>


    <string name="permission_btn_allow">允许</string>
    <string name="permission_btn_setting">去设置</string>
    <string name="permission_btn_exit">退出</string>
    <string name="permission_btn_cancel">取消</string>

    <string name="permission_rationale">为保证APP稳定运行, 请允许获取相关权限</string>
    <string name="permission_never_ask_again">获取相关权限失败,将导致部分功能无法正常使用，需要到设置页面手动授权</string>
    <string name="permission_denied">为保证APP稳定运行，请允许获取相关权限</string>
</resources>
