<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:icon="@null"
    tools:context=".SettingsActivity">

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/shortcut_options">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_float"
            android:summary="@string/float_switch_hint"
            android:switchTextOff="开关被关闭了"
            android:switchTextOn="开关被打开了"
            android:title="@string/float_switch_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/watch_options">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_notification"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_notifications_hint"
            android:title="@string/watch_notifications" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_watch_list"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_list_hint"
            android:title="@string/watch_list" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/anti_block_options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_auto_open"
            android:layout="@layout/preference_checkbox"
            android:title="@string/auto_open_packets" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_self"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_self" />
        <com.max.wechatluckymoney.view.dialog.SeekBarPreference
            pref_kind="pref_open_delay"
            android:key="pref_open_delay"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_with_delay" />
        <EditTextPreference
            android:key="pref_watch_exclude_words"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_watch_exclude_words_summary"
            android:title="@string/skip_phrases" />
        <EditTextPreference
            android:key="pref_watch_exclude_words_chat"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_watch_exclude_words_summary_chat"
            android:title="@string/skip_phrases_chat" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/about">
        <Preference
            android:key="pref_etc_issue"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/help_hint"
            android:title="@string/help_and_feedback" />
        <Preference
            android:key="pref_etc_issue"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/warning_hint"
            android:title="@string/special_explain" />
        <Preference
            android:id="@+id/preference"
            android:key="pref_etc_compatibility"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/compatibility_hint"
            android:title="@string/compatibility" />
    </PreferenceCategory>

</PreferenceScreen>