<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layout_control"
        android:layout_marginBottom="12dp"
        android:background="@color/theme"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="28dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="v1.0"
            android:textColor="#fff"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/main_bg_snow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/layout_header"
        android:background="@mipmap/bg_snow"/>

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_github"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="0.35"
            android:background="#ffffff"
            android:onClick="openGitHub"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_github"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/str_github"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_switch"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="#ffffff"
            android:onClick="openAccessibility"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20dp">

            <ImageView
                android:id="@+id/iv_switch"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/ic_start"/>

            <TextView
                android:id="@+id/tv_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/service_on"
                android:textColor="#dfaa6a"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.35"
            android:background="#ffffff"
            android:onClick="openSettings"
            android:orientation="vertical"
            android:textColor="#858585"
            android:textSize="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_settings"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/settings"
                android:textColor="#858585"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
